--- a/main.css
+++ b/main.css
@@ -3,8 +3,11 @@ html, body {
     padding: 0;
 
     background: rgb(249, 249, 255);
+    
+    user-select: none; -webkit-user-select: none; /* DISABLE TEXT SELECTION */
 }
 
+button:hover { cursor: pointer; }
 
 /* ########################## */
 /* __________START___________ */
@@ -19,7 +22,7 @@ html, body {
     grid-template-rows: auto;
     grid-template-areas: 
         "sTitle"
-        "sStart"
+        "sStart";
 }
 #start .header { grid-area: sTitle; }
 #start .nextButton { grid-area: sStart; }
@@ -38,11 +41,10 @@ html, body {
     display: grid;
     grid-gap: 2px;
     grid-template-columns: 20% 80%;
-    grid-template-rows: 15% 82.5% 2.5%;
+    grid-template-rows: 15% 85%;
     grid-template-areas: 
         "pLogo pTitle"
-        "pOverview pQuestion"
-        "pOverview pQuestion"
+        "pOverview pQuestion";
 }
 
 #pruefung .gridElement {
@@ -54,38 +56,56 @@ html, body {
 #pruefung .header { grid-area: pTitle; 
     /* background: yellow; */ 
     text-align: center; 
-    font-size: 260%; 
+    font-size: 4vh; 
     padding-top: 2.5%;
 }
-#pruefung .header h1 {  }
+#pruefung .header h1 { display: inline; position: relative; top: 1vh; }
 #pruefung .header button { width: 100px; height: 60%; 
     background: rgb(104, 255, 84); 
-    border-width: 0; 
+    border-width: 0;
+    transition: all 100ms;
+    font-size: 120%;
 }
+#pruefung .header button:nth-of-type(1) { transform: scale(-1, 1); }
 #pruefung .header button:hover { background: rgb(174, 255, 171); }
-#pruefung .header button:focus { background: rgb(157, 255, 171); }
 
 #pruefung .overview { grid-area: pOverview; background: rgb(193, 225, 255); overflow-x: hidden; }
-#pruefung .overview ul li { color: black; }
-#pruefung .overview ul li:hover { font-size: 105%; cursor: pointer; }
-#pruefung .overview ul li.answered { color: rgb(0, 0, 207); }
-#pruefung .overview ul li.selected { border: 2px solid black; }
-#pruefung .overview ul li.selected:hover { font-size: 100%; cursor: default; }
+#pruefung .overview ol { position: relative; left: -20px; width: 85%; }
+#pruefung .overview ol li { color: black; }
+#pruefung .overview ol li:hover { transform: scale(1.05, 1); cursor: pointer; }
+#pruefung .overview ol li.answered { color: rgb(0, 0, 207); }
+#pruefung .overview ol li.selected { border: 2px solid black; }
+#pruefung .overview ol li.selected:hover { transform: scale(1, 1); cursor: default; }
 
 #pruefung .question { 
     grid-area: pQuestion; 
     background: rgb(249, 249, 255); 
     padding: 10px;
 }
-#pruefung .endButton { /* grid-area: pEnd;  */ 
+.endButton { /* grid-area: pEnd;  */ 
     background: rgb(86, 233, 56); 
-    float: right; 
+    /* float: right;  */
 
-    width: 200px;
-    height: 70px;
-    border-radius: 2px;
+    width: 250px;
+    height: 8vh;
+    border-radius: 1vh;
+    border-width: 0;
+}
+.endButton:hover {
+    background: rgb(122, 255, 95); 
+}
+.endButtonWrapper { text-align: center; margin-top: 10vh; }
+.endButtonWrapper .endDescription {
+    margin-bottom: 8vh;
+    font-size: 130%;
 }
 
+#auswertungsPsw {
+    margin: 1vh;
+}
+#auswertungsPsw.wrong {
+    border: 2px solid red;
+}
 
 /* ########################## */
 /* ________AUSWERTUNG________ */
@@ -109,3 +129,5 @@ html, body {
 .wrapper { display: block; }
 
 .hidden { display: none; }
+.invisible { opacity: 0; }
+.invisible:hover { cursor: default; }
