--- a/main.css
+++ b/main.css
@@ -167,17 +167,21 @@ button:hover { cursor: pointer; }
     font-size: 2rem;
 
     display: grid;
-    grid-template-columns: 30% 30% 40%;
+    grid-template-columns: 80% 20%;
     text-align: center;
 }
 #auswertung .aFinal .evaluation { margin: 1rem; }
-#auswertung .aFinal .result { color: red; margin: 1rem; }
+#auswertung .aFinal .result { color: red; margin: 1rem; font-weight: bolder; }
 #auswertung .aFinal .result.right { color: green; }
 
 
 #auswertung .mainMenuButton {
     background: rgb(86, 233, 56);
-    margin: 0.5rem;
+    margin-left: 20%;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+    width: 60%;
+    height: 3rem;
 
     border-radius: 1vh;
     border-width: 0;
@@ -196,3 +200,55 @@ button:hover { cursor: pointer; }
 .hidden { display: none; }
 .invisible { opacity: 0; }
 .invisible:hover { cursor: default; }
+
+
+
+/* AWESOME RADIO BUTTONS */
+input[type=radio   ]:not(old){
+    width       : 2em;
+    margin      : 0;
+    padding     : 0;
+    font-size   : 1em;
+    opacity     : 0;
+}
+input[type=radio   ]:not(old) + label{
+  display      : inline-block;
+  margin-left  : -2em;
+  line-height  : 1.5em;
+}
+input[type=radio   ]:not(old) + label > span{
+  display          : inline-block;
+  width            : 0.875em;
+  height           : 0.875em;
+  margin           : 0.25em 0.5em 0.25em 0.25em;
+  border           : 0.0625em solid rgb(192,192,192);
+  border-radius    : 0.25em;
+  background       : rgb(224,224,224);
+  background-image :    -moz-linear-gradient(rgb(240,240,240),rgb(224,224,224));
+  background-image :     -ms-linear-gradient(rgb(240,240,240),rgb(224,224,224));
+  background-image :      -o-linear-gradient(rgb(240,240,240),rgb(224,224,224));
+  background-image : -webkit-linear-gradient(rgb(240,240,240),rgb(224,224,224));
+  background-image :         linear-gradient(rgb(240,240,240),rgb(224,224,224));
+  vertical-align   : bottom;
+}
+input[type=radio   ]:not(old):checked + label > span{
+  background-image :    -moz-linear-gradient(rgb(224,224,224),rgb(240,240,240));
+  background-image :     -ms-linear-gradient(rgb(224,224,224),rgb(240,240,240));
+  background-image :      -o-linear-gradient(rgb(224,224,224),rgb(240,240,240));
+  background-image : -webkit-linear-gradient(rgb(224,224,224),rgb(240,240,240));
+  background-image :         linear-gradient(rgb(224,224,224),rgb(240,240,240));
+}
+input[type=radio]:not(old):checked + label > span > span{
+  display          : block;
+  width            : 0.5em;
+  height           : 0.5em;
+  margin           : 0.125em;
+  border           : 0.0625em solid rgb(77, 97, 153);
+  border-radius    : 0.125em;
+  background       : rgb(102, 121, 204);
+  background-image :    -moz-linear-gradient(rgb(140, 164, 217),rgb(102, 138, 204));
+  background-image :     -ms-linear-gradient(rgb(140, 164, 217),rgb(102, 138, 204));
+  background-image :      -o-linear-gradient(rgb(140, 164, 217),rgb(102, 138, 204));
+  background-image : -webkit-linear-gradient(rgb(140, 164, 217),rgb(102, 138, 204));
+  background-image :         linear-gradient(rgb(140, 164, 217),rgb(102, 138, 204));
+}
